clusters/homelab/apps/fewo/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fewo
  namespace: fewo
  labels:
    app: fewo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fewo
  template:
    metadata:
      labels:
        app: fewo
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: true
        fsGroup: 65532
      containers:
      - name: fewo
        image: ghcr.io/frzifus/fewo:0.0.3
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "250m"
            memory: "128Mi"
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
      - name: cloudflared
        image: cloudflare/cloudflared:2025.5.0
        args:
          - tunnel
          - --no-autoupdate
          - --metrics
          - 0.0.0.0:2000
          - --protocol
          - http2
          - run
          - --token
          - $(TUNNEL_TOKEN)
        resources:
          requests:
            cpu: "20m"
            memory: "32Mi"
          limits:
            cpu: "100m"
            memory: "64Mi"
        ports:
          - containerPort: 2000
        readinessProbe:
          httpGet:
            path: /ready
            port: 2000
          initialDelaySeconds: 30
          periodSeconds: 10
          failureThreshold: 10
        livenessProbe:
          httpGet:
            path: /ready
            port: 2000
          initialDelaySeconds: 60
          periodSeconds: 30
          failureThreshold: 5
        securityContext:
          runAsUser: 65532
          runAsGroup: 65532
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
              - ALL
