clusters/homelab/apps/fewo/network.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-observability-cloudflare
  namespace: fewo
spec:
  # Apply to all pods in the 'redirect' namespace
  endpointSelector:
    matchLabels: {}

  egress:
    # Allow egress to 'ingest' pods in 'observability' namespace on TCP port 4318
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: otel-host-agent-collector
          matchExpressions:
            - key: "k8s:io.kubernetes.pod.namespace"
              operator: In
              values:
                - observability
      toPorts:
        - ports:
            - port: "4318"
              protocol: TCP

    # Allow egress to Cloudflare IP ranges on TCP ports 80 and 443
    # https://www.cloudflare.com/de-de/ips/
    # https://developers.cloudflare.com/cloudflare-one/connections/connect-networks/configure-tunnels/tunnel-with-firewall/
    - toCIDRSet:
        - cidr: "104.16.0.0/12"
        - cidr: "198.41.128.0/17"
        - cidr: "173.245.48.0/20"
        - cidr: "103.21.244.0/22"
        - cidr: "103.22.200.0/22"
        - cidr: "103.31.4.0/22"
        - cidr: "141.101.64.0/18"
        - cidr: "108.162.192.0/18"
        - cidr: "190.93.240.0/20"
        - cidr: "188.114.96.0/20"
        - cidr: "197.234.240.0/22"
        - cidr: "162.158.0.0/15"
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
            - port: "7844"
              protocol: TCP
            - port: "7844"
              protocol: UDP
